[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
[project]
name = "kermapy"
version = "0.0.1"
authors = [
    { name = "Paul Florian Sattlegger" },
]
description = "Kerma protocol node in Python"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
[options]
package_dir=
    =src
install_requires =
    jsonschema~=4.16.0
[options.packages.find]
where=src